--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
         <h3>
           Have you seen the cat?
         </h3>
-        <button class="btn btn-primary">Click here?</button>
+        <button class="btn btn-primary">Click here</button>
       </form>
     </div>
 
@@ -40,7 +40,7 @@
         <h3>
           Did she kill something?
         </h3>
-        <button class="btn btn-danger">Click here?</button>
+        <button class="btn btn-danger">Click here</button>
       </form>
     </div>
 
