--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
   <div class="row">
 
     <div class="col-md-6 text-center">
-      <form action="/newseen" method="post">
+      <form action="newseen" method="post">
         <h3>
           Have you seen the cat?
         </h3>
@@ -36,7 +36,7 @@
     </div>
 
     <div class="col-md-6 text-center">
-      <form action="/newkill" method="post">
+      <form action="newkill" method="post">
         <h3>
           Did she kill something?
         </h3>
