--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,13 @@
           If you haven't seen the cat and push the button I will beat you.
         </div>
 
+        <!-- <div class="my-3 text-center">
+            <a href="https://github.com/scaratozzolo/LastSeen"><i class="fab fa-github"></i></a>
+        </div> -->
+
         {% block content %}{% endblock %}
+
+
 
         <!-- JS, Popper.js, and jQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
